tests/compile-fail/data_race/dealloc_write_race2.stderr
warning: thread support is experimental and incomplete: weak memory effects are not emulated.

error: Undefined Behavior: pointer to alloc969 was dereferenced after this allocation got freed
  --> $DIR/dealloc_write_race2.rs:27:13
   |
27 |             *ptr.0 = 2; //~ ERROR dereferenced after this allocation got freed
   |             ^^^^^^^^^^ pointer to alloc969 was dereferenced after this allocation got freed
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside closure at $DIR/dealloc_write_race2.rs:27:13

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error; 1 warning emitted

